--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
-<head></head>
+<head>
+    <titel>ТАЧКИ</titel>
+</head>
 <body>
-    <p>привет мир!!!</p>
+    <p>Привет мир!1</p>
+    <p>Привет мир!2</p>
+    <p>Привет мир!3</p>
 </body>
 </html>
